control-plane/custom-gateway-api/examples/standard/simple-gateway/httproute.yaml
#$ Used in:
#$ - site-src/guides/simple-gateway.md
#$ - site-src/blog/2021/introducing-v1beta1.md
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo-svc
      port: 8080
